slugs for images

--- a/src/books/_posts/2014-01-09-it.md
+++ b/src/books/_posts/2014-01-09-it.md
@@ -1,6 +1,7 @@
 ---
 layout: book
 published: true
+slug: it
 title: It
 date: 2014-01-09 00:00:00
 author: Stephen King
@@ -9,4 +10,3 @@ isbn-13: 978-0451169518
 url: http://www.amazon.com/It-Stephen-King/dp/0451169514
 rating: 5
 ---
-
