fixed amazon url

--- a/src/books/_posts/2014-01-09-it.md
+++ b/src/books/_posts/2014-01-09-it.md
@@ -7,6 +7,6 @@ date: 2014-01-09 00:00:00
 author: Stephen King
 isbn-10: 0451169514
 isbn-13: 978-0451169518
-url: http://www.amazon.com/It-Stephen-King/dp/0451169514
+amazon-url: http://www.amazon.com/It-Stephen-King/dp/0451169514
 rating: 5
 ---
