fixed layout type

--- a/src/resources/_posts/2015-08-18-font-cdn.md
+++ b/src/resources/_posts/2015-08-18-font-cdn.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: resource
 published: true
 date: 2015-08-18 21:20:40
 title: FontCDN
@@ -10,4 +10,4 @@ tags:
  - inspiration
 ---
 
-Advanced search tool (category, usage, etc) for Google Fonts. 
+Advanced search tool (category, usage, etc) for Google Fonts.
